# preparing-to-exam

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: OCR_DECISION.md  OLLAMA_QA.md  PROJECT_SPEC.md  PROMPTS.md  WORKFLOW.md
scripts/: build_checked_text_full.py  create_checked_text_stubs.py  create_text_stubs.py  create_ticket_templates.py  exam_materials_lib.py  extract_pdf_pages.py  init_exam_materials.py  ocr_benchmark_gate.py  ocr_end_to_end_review_pack.py  ocr_merge_review_pack.py  ocr_sample_benchmark.py  ollama_quality_gate.py  ollama_vision_batch_ocr.py  ollama_vision_model_compare.py  ollama_vision_recovery.py  preprocess_scans.py  promote_ticket.py  register_scans.py  run_pipeline.py  validate_checked_text.py  validate_text_stubs.py  validate_tickets.py
tests/: conftest.py  test_build_checked_text_full.py  test_create_checked_text_stubs.py  test_create_text_stubs.py  test_create_ticket_templates.py  test_extract_pdf_pages.py  test_init_exam_materials.py  test_ocr_benchmark_gate.py  test_ocr_end_to_end_review_pack.py  test_ocr_merge_review_pack.py  test_ocr_sample_benchmark.py  test_ollama_quality_gate.py  test_ollama_vision_batch_ocr.py  test_ollama_vision_model_compare.py  test_ollama_vision_recovery.py  test_preprocess_scans.py  test_progress_workbook.py  test_promote_ticket.py  test_register_scans.py  test_run_pipeline.py  test_validate_checked_text.py
